# PruebasSoftware

a01794708_A4.2/: README
a01794708_A4.2/P1/: ConvertionResults.txt  StatisticsResults.txt  computeStatistics.py  pyproject.toml
a01794708_A4.2/P2/: ConvertionResults.txt  convert_numbers.py
a01794708_A4.2/P3/: WordCountResults.txt  word_count.py
a01794708_A5.2/: ProductList.csv  Results.txt  SalesResults.txt  compute_sales.py  pyproject.toml  readme
a01794708_A6.2/: .coverage  customers.json  hotel_reservation.py  hotels.json  pyproject.toml  readme.md  test_hotel_reservation.py
